mlflow-tracking/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  namespace: mlflow
  labels:
    app: mlflow
spec:
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      containers:
        - name: mflow-server
          image: ngaxavi/mlflow
          imagePullPolicy: IfNotPresent
