mlflow-tracking/k8s/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: mlflow
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    spec:
      containers:
        - name: minio
          image: minio/minio
          imagePullPolicy: IfNotPresent
