mlflow-tracking/k8s/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  namespace: ml-flow
  labels:
    app: mlflow
spec:
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      containers:
        - name: mflow-server
          image: ngaxavi/mlflow
          imagePullPolicy: IfNotPresent
          command:
            - mlflow
          args:
            - server
            - --host
            - 0.0.0.0
            - --backend-store-ui
            -
          livenessProbe:
            httpGet:
              port: 5000
              path: /
          readinessProbe:
            httpGet:
              port: 5000
              path: /
          volumeMounts:
            - mountPath: /export
              name: minio

      volumes:
        - name: minio
