mlflow-tracking/k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: mlflow
  labels:
    app: minio
spec:
  ports:
    - port: 9000
      name: minio-port
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
  type: ClusterIP
