mlflow-tracking/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
  namespace: mlflow
  labels:
    app: mlflow
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      name: mflow-server-port
  selector:
    app: mlflow
  type: ClusterIP
