mlflow-tracking/k8s/minio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: mlflow
  labels:
    app: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 400m
spec:
  rules:
    - host: minio.example.com
      http:
        paths:
          - backend:
              serviceName: minio
              servicePort: 5000
  tls:
    - hosts:
        - minio.example.com
      secretName: ksdkshdkshdkshd
